Update references to Harney County School District #3

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -198,7 +198,7 @@ import "../styles/global.css";
                                 Backed by research from Pacific University
                             </p>
                             <p class="text-sm text-base-content opacity-80">
-                                Approved by Harney County School District
+                                Approved by Harney County School District #3
                             </p>
                         </div>
                     </div>
