--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -198,9 +198,10 @@ import "../styles/global.css";
                                 <img src="/Images/Logo/PacU_Logo_Full Color.png" alt="Pacific University logo" class="h-6 object-contain" loading="lazy" />
                                 <p class="text-sm text-base-content opacity-80">Research by Pacific University</p>
                             </div>
-                            <p class="text-sm text-base-content opacity-80">
-                                Approved by Harney County School District #3
-                            </p>
+                            <div class="flex items-center gap-2">
+                                <img src="/Images/Logo/Harney%20County%20District%20Logo.png" alt="Harney County School District #3 logo" class="h-6 object-contain" loading="lazy" />
+                                <p class="text-sm text-base-content opacity-80">Approved by Harney County SD #3</p>
+                            </div>
                         </div>
                     </div>
                 </div>
